[gd_scene load_steps=5 format=3 uid="uid://ehpaempejv58"]

[ext_resource type="FontFile" uid="uid://bea22tcsj8788" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_8a5ln"]
[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_o6vp7"]
[ext_resource type="Texture2D" uid="uid://x6cm55pk0dwy" path="res://assets/Wedding_Hunter_Logo.png" id="3_k4vn3"]

[sub_resource type="ButtonGroup" id="ButtonGroup_uandq"]

[node name="PauseMenu" type="Control"]
process_mode = 3
top_level = true
layout_mode = 3
anchor_right = 0.409
anchor_bottom = 0.276
offset_left = 22.0
offset_top = 12.0
offset_right = -0.167999
offset_bottom = 0.151978
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o6vp7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -99.0
offset_top = -28.0
offset_right = 444.0
offset_bottom = 215.0
color = Color(0.0941176, 0.168627, 0.2, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(10, 10)
layout_mode = 0
offset_left = 181.0
offset_top = 33.0
offset_right = 421.0
offset_bottom = 158.0

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.0941176, 0.168627, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
self_modulate = Color(0.950799, 0.954284, 0.981228, 1)
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8a5ln")
theme_override_font_sizes/font_size = 30
text = "Weiter"

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8a5ln")
theme_override_font_sizes/font_size = 30
text = "Neustart"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8a5ln")
theme_override_font_sizes/font_size = 30
text = "Exit"

[node name="LevelSelect" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
button_group = SubResource("ButtonGroup_uandq")
item_count = 7
popup/item_0/text = "Level 1"
popup/item_0/id = 1
popup/item_1/text = "Level 2"
popup/item_1/id = 2
popup/item_2/text = "Level 3"
popup/item_2/id = 3
popup/item_3/text = "Level 4"
popup/item_3/id = 4
popup/item_4/text = "Level 5"
popup/item_4/id = 5
popup/item_5/text = "Level 6"
popup/item_5/id = 6
popup/item_6/text = "Level 7"
popup/item_6/id = 7

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(33, 94)
scale = Vector2(0.257813, 0.237305)
texture = ExtResource("3_k4vn3")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/LevelSelect" to="." method="_on_option_button_item_selected"]
